updating api docs
